test/good/functions/return02.px

func f(Float x) [Float] def
    if false do
        return [x]

func g() Int*String def
    skip

print f(1)
print g()
