test/bad/generators/lambda01.px

func* f(): Int def
    skip

g = lambda: f()
g()
